--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><title>All or Nothing</title></head><body><h1>Welcome to All or Nothing</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>All or Nothing: The Track Experience</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="hero">
+    <h1>All or Nothing</h1>
+    <p>The Track Experience</p>
+    <a href="#" class="cta">Enter the Race</a>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
