--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +7,63 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="hero">
-    <h1>All or Nothing</h1>
-    <p>The Track Experience</p>
-    <a href="#" class="cta">Enter the Race</a>
-  </div>
+  <header class="hero">
+    <img src="logo.png" alt="All or Nothing Logo" class="logo" />
+    <h2 class="tagline">You don’t play track and field.</h2>
+    <a href="#demo" class="cta">Play the Demo April 16</a>
+  </header>
+
+  <section class="features">
+    <h3>Built for Sprinters</h3>
+    <ul>
+      <li>🔥 100m, 200m, 400m sprint options</li>
+      <li>🧠 AI racers with real progression & difficulty</li>
+      <li>🎮 Local 2-player and online multiplayer</li>
+      <li>💥 False starts, fatigue, and top-end speed modeling</li>
+    </ul>
+
+    <h3>Career Mode</h3>
+    <ul>
+      <li>🏃 Start as a high schooler & grind to nationals</li>
+      <li>📈 Compete against evolving rivals</li>
+      <li>💬 Experience press conferences & recruiting battles</li>
+      <li>⚖️ Manage school, burnout, and NIL offers</li>
+    </ul>
+
+    <h3>Immersive Track Experience</h3>
+    <ul>
+      <li>🎥 Third-person, photo-finish camera angles</li>
+      <li>📣 Crowd noise, bell lap rings, celebrations</li>
+      <li>📅 Full season with conferences, regionals, state</li>
+      <li>🏅 Medals, fatigue carryover, and national-level prestige</li>
+    </ul>
+  </section>
+
+  <section class="media">
+    <h3>Concept Art</h3>
+    <img src="concept1.jpg" alt="Sprinter concept render" />
+    <img src="concept2.jpg" alt="Stadium view" />
+
+    <h3>Gameplay Preview</h3>
+<img src="gameplay1.jpg" alt="Gameplay preview" />
+<h3>Game Trailer</h3>
+    <div class="trailer-placeholder">Trailer Coming Soon</div>
+  </section>
+
+  <section class="signup">
+    <h3>Stay Updated</h3>
+    <p>Get early access, development updates, and more.</p>
+    <form action="https://example.com/signup" method="POST">
+      <input type="email" name="email" placeholder="Your email address" required />
+      <button type="submit">Sign Up</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>Created by Anonymous Dev — All Rights Reserved</p>
+    <p>Beta access will be available via invite keys</p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
