--- a/explore.html
+++ b/explore.html
@@ -59,6 +59,28 @@
       <h2>📅 Career + Championship Season</h2>
       <p>Progress through your high school season — conference, regionals, state, and nationals. Manage energy, confidence, and school pressure while chasing glory.</p>
     </div>
+    
+    <div class="mode">
+      <h2>🔥 Next-Gen Sprint Mechanics</h2>
+      <p>Feel every step. Our rhythm-based sprint system uses timing, momentum, and biomechanics — no more button mashing. Get false-started and you're out. Perfect start? You're gone.</p>
+    </div>
+    <div class="mode">
+      <h2>📈 Hidden Potential System</h2>
+      <p>Not every star shines right away. Some athletes develop late, others peak early. You'll never know your true ceiling — only how hard you're willing to train.</p>
+    </div>
+    <div class="mode">
+      <h2>🧠 Mental Game</h2>
+      <p>Confidence and pressure affect every race. Your performance changes depending on your mindset, recent results, rivalries, and crowd energy.</p>
+    </div>
+    <div class="mode">
+      <h2>🏆 College Recruiting & NIL Battles</h2>
+      <p>Compete for offers from fictional schools with real reputations. Choose between chill training programs or cutthroat 'sink or swim' environments — but choose wisely.</p>
+    </div>
+    <div class="mode">
+      <h2>👥 Community & Customization</h2>
+      <p>Every race can be saved, shared, and replayed. Track your stats, unlock new gear, and show off your growth from day one to the podium.</p>
+    </div>
+
     <a href="index.html" class="cta">Back to Home</a>
   </section>
 
