--- a/explore.html
+++ b/explore.html
@@ -1,86 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explore All or Nothing</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Explore Modes | All or Nothing</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    .explore-section {
-      padding: 40px 20px;
-      background-color: #111;
-      color: white;
-      text-align: center;
-    }
-    .mode {
-      margin: 40px 0;
-      padding: 20px;
-      background-color: #1c1c1c;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.05);
-    }
-    .mode h2 {
-      color: #f04e23;
-    }
-    .mode p {
-      max-width: 700px;
-      margin: 0 auto;
-    }
-  </style>
 </head>
 <body>
   <header class="hero">
-    <h1 class="tagline">Choose Your Path</h1>
-    <p class="subtitle">Game modes, depth, and intensity — explore what's inside All or Nothing.</p>
+    <h1>Explore the Game</h1>
+    <p class="subtitle">Dive deep into every mode All or Nothing has to offer.</p>
   </header>
 
-  <section class="explore-section">
-    <div class="mode">
+  <main class="mode-list">
+    <section class="mode">
       <h2>🏃 Exhibition Mode</h2>
-      <p>Race the 100m, 200m, or 400m against AI competitors or friends. Adjust difficulty and pacing. Ideal for sharpening your speed and learning the rhythm.</p>
-    </div>
-    <div class="mode">
-      <h2>📚 Story Mode (Coming Soon)</h2>
-      <p>Live the life of a track athlete — from tryouts to college recruiting battles. Handle burnout, school pressure, and tough coaching decisions in a deeply immersive simulation.</p>
-    </div>
-    <div class="mode">
-      <h2>🏔️ Distance Mode (Coming Soon)</h2>
-      <p>Push your limits in 800m, mile, 2-mile, and cross country events. Fatigue carries over between heats and meets. Master pacing and mental strength.</p>
-    </div>
-    <div class="mode">
-      <h2>💡 AI & Genetics</h2>
-      <p>Every athlete has hidden traits — some are fast starters, others develop top-end speed. Genetics, training, and mental toughness all matter.</p>
-    </div>
-    <div class="mode">
-      <h2>🌎 Multiplayer + Rivals</h2>
-      <p>Play online with up to 8 others using race codes. Rivals from your past races show up in future meets. Everyone's career continues — even when you're not playing.</p>
-    </div>
-    <div class="mode">
-      <h2>📅 Career + Championship Season</h2>
-      <p>Progress through your high school season — conference, regionals, state, and nationals. Manage energy, confidence, and school pressure while chasing glory.</p>
-    </div>
-    <div class="mode">
-      <h2>🔥 Next-Gen Sprint Mechanics</h2>
-      <p>Feel every step. Our rhythm-based sprint system uses timing, momentum, and biomechanics — no more button mashing. Get false-started and you're out. Perfect start? You're gone.</p>
-    </div>
-    <div class="mode">
-      <h2>📈 Hidden Potential System</h2>
-      <p>Not every star shines right away. Some athletes develop late, others peak early. You'll never know your true ceiling — only how hard you're willing to train.</p>
-    </div>
-    <div class="mode">
-      <h2>🧠 Mental Game</h2>
-      <p>Confidence and pressure affect every race. Your performance changes depending on your mindset, recent results, rivalries, and crowd energy.</p>
-    </div>
-    <div class="mode">
-      <h2>🏆 College Recruiting & NIL Battles</h2>
-      <p>Compete for offers from fictional schools with real reputations. Choose between chill training programs or cutthroat 'sink or swim' environments — but choose wisely.</p>
-    </div>
-    <div class="mode">
-      <h2>👥 Community & Customization</h2>
-      <p>Every race can be saved, shared, and replayed. Track your stats, unlock new gear, and show off your growth from day one to the podium.</p>
-    </div>
-
-    <a href="index.html" class="cta">Back to Home</a>
-  </section>
+      <p>Race the 100m, 200m, or 400m. Face AI or friends. Master rhythm-based sprinting.</p>
+    </section>
+    <section class="mode">
+      <h2>📚 Story Mode</h2>
+      <p>Play as a high school athlete navigating practice, pressure, and real-life consequences.</p>
+    </section>
+    <section class="mode">
+      <h2>🏔️ Distance Mode</h2>
+      <p>Race the 800m, mile, and 2-mile. Manage energy between heats and carry fatigue over meets.</p>
+    </section>
+    <section class="mode">
+      <h2>🎮 Multiplayer + Rivals</h2>
+      <p>Play live or asynchronously. Face rivals whose careers evolve whether you’re racing or not.</p>
+    </section>
+    <section class="mode">
+      <h2>🧠 Fatigue, Genetics, & Mindset</h2>
+      <p>Balance stamina, confidence, and recovery. Discover hidden traits and late-blooming potential.</p>
+    </section>
+    <a href="index.html" class="cta">← Back to Home</a>
+  </main>
 </body>
 </html>
