--- a/index.html
+++ b/index.html
@@ -9,61 +9,38 @@
 <body>
   <header class="hero">
     <img src="logo.png" alt="All or Nothing Logo" class="logo" />
-    <h2 class="tagline">You don’t play track and field.</h2>
-    <a href="#demo" class="cta">Play the Demo April 16</a>
+    <div class="intro-text">
+      <h1 class="tagline">You Don’t Play Track and Field — You Live It.</h1>
+      <p class="subtitle">A full-scale track experience featuring career mode, rivals, fatigue, recruiting battles, and more.</p>
+      <a href="explore.html" class="cta">Explore</a>
+    </div>
   </header>
 
-  <section class="features">
-    <h3>Built for Sprinters</h3>
-    <ul>
-      <li>🔥 100m, 200m, 400m sprint options</li>
-      <li>🧠 AI racers with real progression & difficulty</li>
-      <li>🎮 Local 2-player and online multiplayer</li>
-      <li>💥 False starts, fatigue, and top-end speed modeling</li>
-    </ul>
+  <main class="features">
+    <section>
+      <h2>Immersive Track & Field Sim</h2>
+      <p>From high school dual meets to national finals, experience every heartbeat, bell lap, and false start like never before.</p>
+    </section>
+    <section>
+      <h2>Career Mode with Real Progression</h2>
+      <p>Grind through a season of training, academic stress, press conferences, and championship events — while your rivals evolve too.</p>
+    </section>
+    <section>
+      <h2>True-to-Life Event Mechanics</h2>
+      <p>Real heat structures, lane assignments, stamina drain, and hidden genetics all determine your shot at glory.</p>
+    </section>
+  </main>
 
-    <h3>Career Mode</h3>
-    <ul>
-      <li>🏃 Start as a high schooler & grind to nationals</li>
-      <li>📈 Compete against evolving rivals</li>
-      <li>💬 Experience press conferences & recruiting battles</li>
-      <li>⚖️ Manage school, burnout, and NIL offers</li>
-    </ul>
-
-    <h3>Immersive Track Experience</h3>
-    <ul>
-      <li>🎥 Third-person, photo-finish camera angles</li>
-      <li>📣 Crowd noise, bell lap rings, celebrations</li>
-      <li>📅 Full season with conferences, regionals, state</li>
-      <li>🏅 Medals, fatigue carryover, and national-level prestige</li>
-    </ul>
-  </section>
-
-  <section class="media">
-    <h3>Concept Art</h3>
-    <img src="concept1.jpg" alt="Sprinter concept render" />
-    <img src="concept2.jpg" alt="Stadium view" />
-
-    <h3>Gameplay Preview</h3>
-<img src="gameplay1.jpg" alt="Gameplay preview" />
-<h3>Game Trailer</h3>
-    <div class="trailer-placeholder">Trailer Coming Soon</div>
-  </section>
-
-  <section class="signup">
-    <h3>Stay Updated</h3>
-    <p>Get early access, development updates, and more.</p>
+  <section class="signup-section">
+    <h2>Sign Up for Early Access</h2>
     <form action="https://example.com/signup" method="POST">
-      <input type="email" name="email" placeholder="Your email address" required />
+      <input type="email" name="email" placeholder="Your email" required />
       <button type="submit">Sign Up</button>
     </form>
   </section>
 
   <footer>
-    <p>Created by Anonymous Dev — All Rights Reserved</p>
-    <p>Beta access will be available via invite keys</p>
+    <p>&copy; 2025 All or Nothing. Built by Anonymous Dev. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
